discussion/kv_engine/136652/136652_rev12_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39745: Notify flusher hpvbs from outside flusher

Currently if there is a high priority request then we set a counter
in the shard and add an element to the VBucket to track this an notify
the flusher. The flusher then runs, checks the shard counter, then adds
the vb to the hpvbs queue. To allow us to remove the shard checks from
the flusher to decouple them, we need to move this notification of a
high priority vb out of the flusher.

Change-Id: Ic238ac020d95dd518c7ef2eb1e2a087dd7e54832

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-07-23 16:22:33.000000000
Message: 
Uploaded patch set 12.
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-07-23 16:22:39.000000000
Message: 
Patch Set 12:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-23 17:01:35.000000000
Message: 
Patch Set 12: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10797/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_vb.cc:1116:28: error: member access into incomplete type "Flusher" [clang-diagnostic-error]
        shard->getFlusher()->notifyFlushEvent(ptr);
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kv_bucket_iface.h:35:7: note: forward declaration of "Flusher"
class Flusher;
      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10797/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/ep_vb.cc:1116:28:
error: member access into incomplete type "Flusher" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10797/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32394/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/ep_vb.cc:1116:28:
error: member access into incomplete type "Flusher"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32394/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12564/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9456/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/37997/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11475/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/388/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20461/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/416/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12387/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12912/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
